LAB Export to PDF

--- a/notebooks/00_LAB/LAB_1_neu.html
+++ b/notebooks/00_LAB/LAB_1_neu.html
@@ -14582,10 +14582,28 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p><a href="_index.ipynb">&larr; LAB </a>&loz;
 <a href="../../README.md"> &uarr; TOC &uarr; </a>
 <img src='../_img/icon.svg' align='right' width='10%'></img></p>
-<p><b>Name, Vorname: Nguyen, Hoang Son</b></p>
-<p>Gruppe x</p>
-<p>Alsheikh, Roubeer</p>
-<p>Nouri, Nawid</p>
+<p><b></p>
+<table>
+<thead><tr>
+<th>Gruppe P</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Alsheikh, Roubeer</td>
+<td></td>
+</tr>
+<tr>
+<td>Nouri, Nawid</td>
+<td></td>
+</tr>
+<tr>
+<td>Nguyen, Hoang Son</td>
+</tr>
+</tbody>
+</table>
+<p>&lt;/b&gt;</p>
 <h3 id="Inhalt">Inhalt<a class="anchor-link" href="#Inhalt">&#182;</a></h3><p><a href="#allgemeines">0. Allgemeine Hinweise</a></p>
 <p><a href="#intro">1. Einführung</a></p>
 <p><a href="#convolution">2. Diskrete Faltung</a></p>
